Updated APIs (#35)
